--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   calendar_timeline: ^1.1.1
   flutter_slidable: ^2.0.0
+  firebase_core: ^2.14.0
+  cloud_firestore: ^4.4.3
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
